--- a/src/sass/partials/_header.scss
+++ b/src/sass/partials/_header.scss
@@ -42,27 +42,62 @@ h1 {
 .btn-full {
   &:link,
   &:visited {
-    background-color: $org;
-    border: 1px solid $org;
+    background-color: $orange;
+    border: 1px solid $orange;
     color: #fff;
     margin-right: 15px;
   }
   &:hover,
   &:active {
-    background-color: $org-dark;
-    border: 1px solid $org-dark;
+    background-color: $dark-orange;
+    border: 1px solid $dark-orange;
   }
 }
 
 .btn-ghost {
   &:link,
   &:visited {
-    border: 1px solid $org;
-    color: $org;
+    border: 1px solid $orange;
+    color: $orange;
   }
   &:hover,
   &:active {
-    border: 1px solid $org-dark;
+    border: 1px solid $dark-orange;
     color: #fff;
+  }
+}
+
+.logo {
+  width: 100px;
+  height: auto;
+  float: left;
+  margin-top: 20px;
+}
+
+.main-nav {
+  float: right;
+  list-style: none;
+  margin-top: 55px;
+
+  li {
+    display: inline-block;
+    margin-left: 40px;
+    a {
+      &:link,
+      &:visited {
+        padding: 8px 0;
+        color: #fff;
+        text-decoration: none;
+        text-transform: uppercase;
+        font-size: 0.9rem;
+        border-bottom: 2px solid transparent;
+        transition: border-bottom 0.2s;
+      }
+
+      &:hover,
+      &:active {
+        border-bottom: 2px solid $orange;
+      }
+    }
   }
 }
