--- a/src/sass/partials/_mixin.scss
+++ b/src/sass/partials/_mixin.scss
@@ -14,7 +14,7 @@
   transition: background-color 0.2s, border 0.2s, color 0.2s;
 }
 @mixin btn-hov {
-  background-color: $org-dark;
+  background-color: $dark-orange;
 }
 
 // === BORDER ===
