features section created.

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,5 @@
 @import "partials/variables";
 @import "partials/mixin";
 @import "partials/general";
-@import "partials/header";
+@import "partials/sections/header";
+@import "partials/sections/features";
