--- a/src/sass/partials/_general.scss
+++ b/src/sass/partials/_general.scss
@@ -19,3 +19,65 @@
   max-width: 1140px;
   margin: 0 auto;
 }
+
+.box {
+  padding: 1%;
+}
+
+.box p {
+  font-size: 0.9rem;
+}
+/* HEADINGS */
+h1,
+h2,
+h3 {
+  font-weight: 300;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+
+h1 {
+  margin-top: 0;
+  margin-bottom: 20px;
+  color: #fff;
+  font-size: 2.4rem;
+  word-spacing: 4px;
+}
+
+h2 {
+  font-size: 1.8rem;
+  word-spacing: 2px;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+h2:after {
+  display: block;
+  height: 2px;
+  background-color: $orange;
+  content: "";
+  width: 100px;
+  margin: 0 auto;
+  margin-top: 30px;
+}
+
+h3 {
+  font-size: 1.1rem;
+  margin-bottom: 15px;
+}
+
+/* BUTTONS */
+.btn {
+  &:link,
+  &:visited {
+    @include btn;
+  }
+  &:hover,
+  &:active {
+    @include btn-hov;
+  }
+}
+
+section {
+  padding: 80px 0;
+}
