meals section markup.

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -3,3 +3,4 @@
 @import "partials/general";
 @import "partials/sections/header";
 @import "partials/sections/features";
+@import "partials/sections/meals";
