--- a/src/sass/partials/sections/_features.scss
+++ b/src/sass/partials/sections/_features.scss
@@ -1,7 +1,10 @@
-.long-copy {
-  line-height: 145%;
-  width: 70%;
-  margin-left: 15%;
+.features {
+  .long-copy {
+    line-height: 145%;
+    width: 70%;
+    margin-left: 15%;
+    margin-bottom: 30px;
+  }
 }
 
 .icon-big {
