styles added to steps section.

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -4,3 +4,4 @@
 @import "partials/sections/header";
 @import "partials/sections/features";
 @import "partials/sections/meals";
+@import "partials/sections/steps";
