--- a/src/sass/partials/_general.scss
+++ b/src/sass/partials/_general.scss
@@ -4,6 +4,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 :root {
@@ -13,6 +14,11 @@
   font-weight: 300;
   font-size: 20px;
   text-rendering: optimizeLegibility;
+}
+
+a {
+  text-decoration: none;
+  color: #555;
 }
 
 .clearfix {
