--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -5,3 +5,4 @@
 @import "partials/sections/features";
 @import "partials/sections/meals";
 @import "partials/sections/steps";
+@import "partials/sections/cities";
