testimonials section styled.

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -6,3 +6,4 @@
 @import "partials/sections/meals";
 @import "partials/sections/steps";
 @import "partials/sections/cities";
+@import "partials/sections/testimonials";
