update to header section.

--- a/src/sass/partials/sections/_header.scss
+++ b/src/sass/partials/sections/_header.scss
@@ -4,6 +4,7 @@ header {
     url(../images/raster/hero.jpg);
   background-size: cover;
   background-position: center;
+  background-attachment: fixed;
   height: 100vh;
 }
 
