--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,3 +7,4 @@
 @import "partials/sections/steps";
 @import "partials/sections/cities";
 @import "partials/sections/testimonials";
+@import "partials/sections/plans";
