--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -8,3 +8,4 @@
 @import "partials/sections/cities";
 @import "partials/sections/testimonials";
 @import "partials/sections/plans";
+@import "partials/sections/form";
