--- a/src/sass/partials/sections/_form.scss
+++ b/src/sass/partials/sections/_form.scss
@@ -24,3 +24,46 @@
     margin: 10px 5px 10px 0;
   }
 }
+
+.form-group {
+  display: block;
+  margin-bottom: 15px;
+  input {
+    padding: 0;
+    height: initial;
+    width: initial;
+    margin-bottom: 0;
+    display: none;
+    cursor: pointer;
+  }
+  label {
+    position: relative;
+    cursor: pointer;
+    &::before {
+      content: "";
+      appearance: none;
+      background-color: transparent;
+      border: 1px solid #ccc;
+      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05),
+        inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05);
+      padding: 10px;
+      display: inline-block;
+      position: relative;
+      vertical-align: middle;
+      cursor: pointer;
+      margin-right: 5px;
+    }
+  }
+  input:checked + label::after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 4px;
+    left: 8px;
+    width: 6px;
+    height: 14px;
+    border: solid $orange;
+    border-width: 0 2px 2px 0;
+    transform: rotate(45deg);
+  }
+}
