--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,3 +9,4 @@
 @import "partials/sections/testimonials";
 @import "partials/sections/plans";
 @import "partials/sections/form";
+@import "partials/sections/footer";
