--- a/src/sass/partials/sections/_form.scss
+++ b/src/sass/partials/sections/_form.scss
@@ -2,6 +2,20 @@
   width: 60%;
   margin: 0 auto;
 
+  label.error {
+    font-size: 0.9rem;
+    color: $dark-orange;
+    display: block;
+    margin-top: 5px;
+    text-align: center;
+  }
+
+  input.error,
+  select.error,
+  textarea.error {
+    background-color: #faf1e9;
+  }
+
   input[type="text"],
   input[type="email"],
   select,
@@ -66,4 +80,15 @@
     border-width: 0 2px 2px 0;
     transform: rotate(45deg);
   }
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  -webkit-box-shadow: 0 0 0px 1000px #fff inset;
+  transition: background-color 5000s ease-in-out 0s;
 }
