--- a/src/sass/partials/sections/_features.scss
+++ b/src/sass/partials/sections/_features.scss
@@ -4,5 +4,9 @@
     width: 70%;
     margin-left: 15%;
     margin-bottom: 30px;
+    @include big-tablet {
+      width: 80%;
+      margin-left: 10%;
+    }
   }
 }
