--- a/src/sass/partials/sections/_header.scss
+++ b/src/sass/partials/sections/_header.scss
@@ -14,6 +14,10 @@ header {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  @include desktop {
+    width: 100%;
+    padding: 0 2%;
+  }
 }
 
 .logo {
