--- a/src/sass/partials/sections/_plans.scss
+++ b/src/sass/partials/sections/_plans.scss
@@ -14,6 +14,12 @@
       padding: 5px 0;
     }
   }
+
+  transition: transform 0.3s, box-shadow 0.3s;
+  &:hover {
+    transform: scale3d(1.01, 1.01, 1.01);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+  }
 }
 
 .plan-box div {
