--- a/src/sass/partials/sections/_cities.scss
+++ b/src/sass/partials/sections/_cities.scss
@@ -3,9 +3,13 @@
     width: 100%;
     height: auto;
     margin-bottom: 15px;
+    border-radius: 5px;
   }
   .city-feature {
     margin-bottom: 5px;
+    @include big-tablet {
+      font-size: 0.8rem;
+    }
   }
 
   a {
