--- a/src/sass/partials/sections/_header.scss
+++ b/src/sass/partials/sections/_header.scss
@@ -18,6 +18,9 @@ header {
     width: 100%;
     padding: 0 2%;
   }
+  @include small-tablet {
+    padding: 0 4%;
+  }
 }
 
 .logo {
@@ -52,5 +55,8 @@ header {
         border-bottom: 2px solid $orange;
       }
     }
+  }
+  @include small-tablet {
+    display: none;
   }
 }
