--- a/src/sass/partials/sections/_plans.scss
+++ b/src/sass/partials/sections/_plans.scss
@@ -20,6 +20,11 @@
     transform: scale3d(1.01, 1.01, 1.01);
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
   }
+  @include big-tablet {
+    width: 100%;
+    margin-left: 100%;
+    margin-left: 0;
+  }
 }
 
 .plan-box div {
@@ -44,6 +49,9 @@
   span {
     font-size: 0.9rem;
     font-weight: 300;
+  }
+  @include big-tablet {
+    font-size: 2.5rem;
   }
 }
 
