some hover effects added.

--- a/src/sass/partials/_general.scss
+++ b/src/sass/partials/_general.scss
@@ -179,6 +179,10 @@ section {
   display: block;
   color: $orange;
   margin-bottom: 10px;
+  transition: color 0.2s;
+  &:hover {
+    color: $grey;
+  }
 }
 
 .icon-small {
