--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,6 +1,7 @@
 @import "partials/variables";
 @import "partials/mixin";
 @import "partials/general";
+@import "partials/animations";
 @import "partials/sections/header";
 @import "partials/sections/features";
 @import "partials/sections/meals";
