--- a/src/sass/partials/sections/_header.scss
+++ b/src/sass/partials/sections/_header.scss
@@ -47,6 +47,7 @@ header {
   li {
     display: inline-block;
     margin-left: 40px;
+
     a {
       &:link,
       &:visited {
@@ -65,8 +66,38 @@ header {
       }
     }
   }
-  @include small-tablet {
-    display: none;
+}
+
+@include small-tablet {
+  .main-nav {
+    float: left;
+    margin-top: 35px;
+    margin-left: 25px;
+    height: 0;
+    overflow: hidden;
+    transition: 0.1s;
+
+    &.open {
+      top: 0;
+      height: 100%;
+      animation: fadeInDown 0.2s;
+    }
+
+    &.close {
+      animation: fadeOutUp 0.2s forwards;
+    }
+    li {
+      display: block;
+      a {
+        &:link,
+        &:visited {
+          display: block;
+          border: none !important;
+          padding: 10px 0;
+          font-size: 1rem;
+        }
+      }
+    }
   }
 }
 
@@ -109,4 +140,43 @@ header {
     display: block;
   }
   transition: all 0.2s;
+
+  @include small-tablet {
+    .main-nav {
+      margin-top: 10px;
+
+      li {
+        display: block;
+        a {
+          &:link,
+          &:visited {
+            padding: 10px 0;
+          }
+        }
+      }
+    }
+    .mobile-nav-icon {
+      margin-top: 10px;
+      i {
+        color: $grey;
+      }
+    }
+  }
+}
+
+/* Mobile navigation */
+.mobile-nav-icon {
+  float: right;
+  margin-top: 30px;
+  cursor: pointer;
+  display: none;
+
+  i {
+    font-size: 2rem;
+    color: #fff;
+  }
+
+  @include small-tablet {
+    display: inline-block;
+  }
 }
